# parking-check

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/models/: __init__.py  favorite.py  feedback.py  parking_lot.py  parking_realtime.py  place.py  search_log.py  self_parking_feedback.py  visit_log.py
backend/app/routers/: discover.py  favorites.py  health.py  parking.py  places.py  visits.py
backend/app/schemas/: favorite.py  parking.py  place.py  self_parking_feedback.py  visit.py
backend/app/services/: congestion.py  discover.py  external_recommender.py  kakao.py  kakao_place_detail.py  llm_parking_verifier.py  llm_summary.py  menu_extractor.py  naver_search.py  parking_classifier.py  parking_fallback.py  parking_search.py  recommendation.py  self_parking.py  self_parking_web.py  seoul_realtime.py  visit_history.py  walking_route.py  web_parking_search.py  youtube_search.py
backend/app/utils/: cache.py  geo.py
backend/db/: init.sql
backend/scripts/: collect_seoul_realtime.py  load_parking_csv.py
backend/scripts/data/: .gitkeep
docs/: API.md  ARCHITECTURE.md  DB_SCHEMA.md  HANDOFF.md  QA.md  SECURITY.md  SETUP.md  TASKS.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
scripts/: collect_popular_pois.py  validate_e2e.py  validate_market_food.py  validate_naver_self_parking_100.py  validate_popular.py  validate_real_parking.py  validate_self_parking.py  (+1 more)
(+88 files in other folders)
